# OSLab1

./: CMakeLists.txt  README.md
src/: creator.cpp  employee.h  main.cpp  reporter.cpp
tests/: test_creator.cpp  test_employee.cpp  test_reporter.cpp
